--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,7 +1,8 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.sumy.dooraccesscontrolsystem.MainActivity"
     tools:ignore="MergeRootFrame" />
