--- a/res/layout/activity_welcome.xml
+++ b/res/layout/activity_welcome.xml
@@ -3,6 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:scaleType="fitXY"
+        android:src="@drawable/welcome_background" />
+
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
@@ -10,9 +17,10 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="84dp"
-        android:textSize="30sp"
         android:text="门禁管理系统"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@android:color/holo_orange_dark"
+        android:textSize="30sp" />
 
     <ProgressBar
         android:id="@+id/progressBar1"
@@ -21,6 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="92dp" />
+        android:layout_marginBottom="92dp"
+        android:background="@android:color/darker_gray" />
 
 </RelativeLayout>
